Fixed issue with directory recognition causing export to generate foler instead of .skf files